Lots of surgery

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="description" content="Seattle AV Source is Seattle's Premier supplier of projectors, lighting, video, audio, staging and drapery equipment for auctions, schools, conferences and conventions" />
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="seattleavs icon" href="images/favicon.ico">
+		<link rel="icon" href="images/favicon.ico">
 
 		<!-- Embedded Google Web Font -->
 		<link href='http://fonts.googleapis.com/css?family=quantico:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
@@ -40,14 +40,17 @@
 
 	</head>
 	<body>
-		
-		<!-- Outter container and fixed nav bar -->
+
+		<!-- Top of Page -->
 		<div class="top-bar" id="top">
-			<div class="container"></div>
+
+			<!-- Stuck Menu -->
 			<div class="top-menu stuckMenu">
+
+				<!-- Outer Container for Fixed Navigation -->
 				<div class="container">
-					
-					<!-- Static navbar -->
+
+					<!-- Fixed Navigation -->
 					<div class="navbar navbar-default" role="navigation">
 						<div class="container">
 							<div class="navbar-header">
@@ -60,6 +63,7 @@
 								<a class="navbar-brand" href="" rel="nofollow"><img src="images/logo.png" height="145" alt="logo"/></a>
 							</div>
 
+							<!-- Menu -->
 							<div class="navbar-collapse collapse" id="nav-bar">
 								<ul class="nav navbar-nav navbar-right" style="margin-top: 40px; font-size: 13px;">
 
@@ -72,11 +76,21 @@
 									<li>
 										<a href="#rentals_sales" class="rentaldropdown">RENTALS <span class="caret"></span></a>
 										<ul>
-											<li><a href="#projectors">PROJECTORS</a></li>
-											<li><a href="#lighting">LIGHTING</a></li>
-											<li><a href="#video">VIDEO / SCREENS</a></li>
-											<li><a href="#audio">SOUND SYSTEMS</a></li>
-											<li><a href="#staging">STAGE / DRAPES</a></li>
+											<li>
+												<a href="#projectors">PROJECTORS</a>
+											</li>
+											<li>
+												<a href="#lighting">LIGHTING</a>
+											</li>
+											<li>
+												<a href="#video">VIDEO / SCREENS</a>
+											</li>
+											<li>
+												<a href="#audio">SOUND SYSTEMS</a>
+											</li>
+											<li>
+												<a href="#staging">STAGE / DRAPES</a>
+											</li>
 										</ul>
 									</li>
 									<li>
@@ -87,13 +101,11 @@
 									</li>
 								</ul>
 
-							</div><!--/.nav-collapse -->
-						</div><!--/.container-fluid -->
-					</div><!--/.navbar -->
-				</div>
-				<!-- /container -->
-
-			</div>
+							</div><!-- End Menu -->
+						</div>
+					</div>
+				</div><!-- End Nav -->
+			</div><!-- End stuckMenu -->
 
 			<!-- JSSOR Full Width Slider -->
 			<div id="slider1_container" style="position: relative; margin: 0 auto;
@@ -111,7 +123,7 @@
 				<div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1920px;
 				height: 450px; overflow: hidden;">
 					<div>
-						<img u="image" src="images/slider2.jpg" />
+						<img u="image" src="images/slider2.jpg" alt="ambience"/>
 
 						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
 						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
@@ -120,7 +132,7 @@
 						</div>
 					</div>
 					<div>
-						<img u="image" src="images/slider1.jpg" />
+						<img u="image" src="images/slider1.jpg" alt="staging with backgrounds" />
 						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
 						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
 						color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
@@ -128,7 +140,7 @@
 						</div>
 					</div>
 					<div>
-						<img u="image" src="images/slider3.jpg" />
+						<img u="image" src="images/slider3.jpg" alt="projection and screens" />
 						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
 						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
 						color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
@@ -136,7 +148,7 @@
 						</div>
 					</div>
 					<div>
-						<img u="image" src="images/slider4.jpg" />
+						<img u="image" src="images/slider4.jpg" alt="lighting installation"/>
 						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
 						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
 						color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
@@ -144,18 +156,17 @@
 						</div>
 					</div>
 					<div>
-						<img u="image" src="images/slider5.jpg" />
+						<img u="image" src="images/slider5.jpg" alt="drapes pipes and booths"/>
 						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
 						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
 						color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
 							<span>DRAPES, PIPES AND BOOTHS</span>
 						</div>
 					</div>
-				</div>
+				</div><!-- End Slides Container -->
 				<div class="clearfix"></div>
 			</div>
-			<!-- End JSSOR Slider -->
-		</div>
+		</div><!-- End JSSOR Slider -->
 
 		<!-- Start Welcome -->
 		<div id="about" >
@@ -180,19 +191,14 @@
 												was established to provide our clients with the best in Services, Equipment
 												and discounted AV Rental Pricing.
 											</p>
-
 										</div>
-										<!-- /.service-item -->
 									</div>
-
-									<!-- /.col-md-3 -->
 								</div>
-								<!-- /.row -->
 							</div>
-							<!-- /.container -->
 						</div>
+						<!-- End Welcome -->
 
-						<!-- /.services -->
+						<!-- Services -->
 						<div id="services" class="content-section">
 							<div class="container" style="font-size: 16px;">
 								<div class="row">
@@ -356,8 +362,8 @@
 
 				</div>
 			</div>
-		</div>f
-		<!-- End Rentals Sales -->
+		</div>
+		f <!-- End Rentals Sales -->
 
 		<!-- Projectors -->
 		<div id="projectors">
@@ -448,78 +454,6 @@
 						</p>
 					</li>
 				</ul><!-- End Gallery -->
-				<ul class="project-gallery" >
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
-						<a class="colorbox" href="images/p1f.jpg" data-group="projectors">
-						<div class="project-box">
-							<img src="images/p1f.jpg" class="img-responsive" alt="gallery" />
-							<div class="project-overlay">
-								<h5>Eiki #LC-85</h5>
-								<hr />
-								<h4>20000 ANSI Lumens. HD 1080p. Long throw, up to 100 feet wide</h4>
-							</div>
-						</div> </a>
-						<p>
-							20000 ANSI Lumens
-						</p>
-					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
-						<a class="colorbox" href="images/p2f.jpg" data-group="projectors">
-						<div class="project-box">
-							<img src="images/p2f.jpg" class="img-responsive" alt="gallery" />
-							<div class="project-overlay">
-								<h5>Eiki #LC-XB43</h5>
-								<hr />
-								<h4>10000 ANSI Lumens. HD 1080p. Long throw up to 45 feet wide.</h4>
-							</div>
-						</div> </a>
-						<p>
-							10000 ANSI Lumens
-						</p>
-					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-						<a class="colorbox" href="images/p3f.jpg" data-group="projectors">
-						<div class="project-box">
-							<img src="images/p3f.jpg" class="img-responsive" alt="gallery" />
-							<div class="project-overlay">
-								<h5>Eiki #LC-XB35</h5>
-								<hr />
-								<h4>8000 ANSI Lumens. HD 1080p. Long throw up to 30 feet wide.</h4>
-							</div>
-						</div> </a>
-						<p>
-							8000 ANSI Lumens
-						</p>
-					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
-						<a class="colorbox" href="images/p5f.jpg" data-group="projectors">
-						<div class="project-box">
-							<img src="images/p5f.jpg" class="img-responsive" alt="gallery" />
-							<div class="project-overlay">
-								<h5>Eiki #CB-20</h5>
-								<hr />
-								<h4>5000 ANSI Lumens. HD 1080p. Long throw up to 20 feet wide.</h4>
-							</div>
-						</div> </a>
-						<p>
-							5000 ANSI Lumens
-						</p>
-					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-						<a class="colorbox" href="images/p4f.jpg" data-group="projectors">
-						<div class="project-box">
-							<img src="images/p4f.jpg" class="img-responsive" alt="gallery" />
-							<div class="project-overlay">
-								<h5>Hitachi Short Throw</h5>
-								<hr />
-								<h4>4500 ANSI Lumens. HD 1080p. Short throw up to 15 feet wide</h4>
-							</div>
-						</div> </a>
-						<p>
-							4500 ANSI Lumens
-						</p>
-					</li>
-				</ul><!-- End Gallery -->
 
 				<!-- Back to Rentals Button -->
 				<div class="text-center">
@@ -531,9 +465,6 @@
 
 			</div>
 			<!-- End Container -->
-		</div>
-		<!-- End Projectors -->
-
 		</div>
 		<!-- End Projectors -->
 
@@ -638,9 +569,8 @@
 			<!-- End Back to Rentals Button -->
 
 		</div><!-- /.container -->
-		</div>
+
 		<div class="clearfix"></div>
-		</div>
 
 		<!-- Begin Video Gallery -->
 		<div id="video">
@@ -657,14 +587,50 @@
 				</div>
 
 				<ul class="project-gallery" >
+
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
 						<a class="colorbox" href="images/Dummy.jpg">
 						<div class="project-box">
 							<img src="images/vi3t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
-								<h5>IMAGE</h5>
+								<h5>FLOOR STANDING</h5>
 								<hr />
-								<h4>PLACE HOLDER</h4>
+								<h4>VIDEO DISPLAY</h4>
+							</div>
+						</div> </a>
+					</li>
+
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
+						<a class="colorbox" href="images/vi.jpg">
+						<div class="project-box">
+							<img src="images/v6t.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>FLOOR STANDING</h5>
+								<hr />
+								<h4>VIDEO SCREEN MOUNTS</h4>
+							</div>
+						</div> </a>
+					</li>
+					
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
+						<a class="colorbox" href="images/vi2.jpg">
+						<div class="project-box">
+							<img src="images/v2t.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>TABLE OR FLOOR TOP</h5>
+								<hr />
+								<h4>VIDEO MONITORS</h4>
+							</div>
+						</div> </a>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
+						<a class="colorbox" href="images/vi1.jpg">
+						<div class="project-box">
+							<img src="images/vi1t.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>RACK / CONSOLE MOUNTED</h5>
+								<hr />
+								<h4>VIDEO MONITORS</h4>
 							</div>
 						</div> </a>
 					</li>
@@ -673,45 +639,9 @@
 						<div class="project-box">
 							<img src="images/vi2t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
-								<h5>IMAGE</h5>
+								<h5>TABLE TOP</h5>
 								<hr />
-								<h4>PLACE HOLDER</h4>
-							</div>
-						</div> </a>
-					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
-						<a class="colorbox" href="images/Dummy.jpg">
-						<div class="project-box">
-							<img src="images/vi3t.jpg" class="img-responsive" alt="gallery" />
-							<div class="project-overlay">
-								<h5>IMAGE</h5>
-								<hr />
-								<h4>PLACE HOLDER</h4>
-							</div>
-							<div class="text-center">
-								Ultra short throw projector
-							</div>
-						</div> </a>
-					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
-						<a class="colorbox" href="images/Dummy.jpg">
-						<div class="project-box">
-							<img src="images/vi2t.jpg" class="img-responsive" alt="gallery" />
-							<div class="project-overlay">
-								<h5>IMAGE</h5>
-								<hr />
-								<h4>PLACE HOLDER</h4>
-							</div>
-						</div> </a>
-					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
-						<a class="colorbox" href="images/Dummy.jpg">
-						<div class="project-box">
-							<img src="images/vi3t.jpg" class="img-responsive" alt="gallery" />
-							<div class="project-overlay">
-								<h5>IMAGE</h5>
-								<hr />
-								<h4>PLACE HOLDER</h4>
+								<h4>VIDEO MONITORS</h4>
 							</div>
 						</div> </a>
 					</li>
@@ -728,9 +658,9 @@
 			<!-- End Back to Rentals Button -->
 
 		</div><!-- /.container -->
-		</div>
+
 		<div class="clearfix"></div>
-		</div>
+
 
 		<!-- Staging / Drapery -->
 		<div id="audio">
@@ -895,7 +825,7 @@
 			</div><!-- /.container -->
 		</div>
 		<div class="clearfix"></div>
-		</div>
+
 		<!-- End Staging / Drapery -->
 
 		<!-- Gallery -->
@@ -909,7 +839,6 @@
 							<hr class="team_hr team_hr_right hr_gray" />
 						</div>
 					</div>
-					<!-- /.row -->
 
 					<div class="text-center">
 						<ul class="project-gallery" >
@@ -1097,9 +1026,10 @@
 				</div>
 			</div>
 		</div><!-- End Testimonial -->
-		
+
 		<!-- Footer -->
 		<div class="footer" >
+
 			<div class="container">
 				<div class="row">
 					<div class="text-center">
@@ -1119,7 +1049,7 @@
 									<a href="#"> <span class="social-icon-linkedin"></span> </a>
 								</li>
 								<li>
-									<a href="#"> <span class="social-icon-dribbble"></span> </a>
+									<a href="#"> <span class="social-icon-gplus"></span> </a>
 								</li>
 							</ul>
 							<div class="height30"></div>
