W3 Validation (so far)
This push validates to HTML5
Still lots of work to be done

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			top: 150px; left: 0px; width: 1920px; height: 450px; overflow: hidden;">
 
 				<!-- Loading Screen -->
-				<div u="loading" style="position: absolute; top: 0px; left: 0px;">
+				<div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
 					<div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block;
 					top: 0px; left: 0px; width: 100%; height: 100%;"></div>
 					<div style="position: absolute; display: block; background: url(js/img/loading.gif) no-repeat center center;
@@ -120,10 +120,10 @@
 				</div>
 
 				<!-- Slides Container -->
-				<div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1920px;
+				<div data-u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1920px;
 				height: 450px; overflow: hidden;">
 					<div>
-						<img u="image" src="images/slider2.jpg" alt="ambience"/>
+						<img data-u="image" src="images/slider2.jpg" alt="ambience"/>
 
 						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
 						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
@@ -132,7 +132,7 @@
 						</div>
 					</div>
 					<div>
-						<img u="image" src="images/slider1.jpg" alt="staging with backgrounds" />
+						<img data-u="image" src="images/slider1.jpg" alt="staging with backgrounds" />
 						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
 						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
 						color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
@@ -140,7 +140,7 @@
 						</div>
 					</div>
 					<div>
-						<img u="image" src="images/slider3.jpg" alt="projection and screens" />
+						<img data-u="image" src="images/slider3.jpg" alt="projection and screens" />
 						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
 						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
 						color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
@@ -148,7 +148,7 @@
 						</div>
 					</div>
 					<div>
-						<img u="image" src="images/slider4.jpg" alt="lighting installation"/>
+						<img data-u="image" src="images/slider4.jpg" alt="lighting installation"/>
 						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
 						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
 						color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
@@ -156,7 +156,7 @@
 						</div>
 					</div>
 					<div>
-						<img u="image" src="images/slider5.jpg" alt="drapes pipes and booths"/>
+						<img data-u="image" src="images/slider5.jpg" alt="drapes pipes and booths"/>
 						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
 						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
 						color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
@@ -557,7 +557,7 @@
 							GOBO Light Projection
 						</p>
 					</li>
-				</ul><!-- /.gallery -->
+				</ul>
 			</div>
 
 			<!-- Back to Rentals Button -->
@@ -568,7 +568,7 @@
 			</div>
 			<!-- End Back to Rentals Button -->
 
-		</div><!-- /.container -->
+		</div><!-- End Lighting Gallery -->
 
 		<div class="clearfix"></div>
 
@@ -611,7 +611,7 @@
 							</div>
 						</div> </a>
 					</li>
-					
+
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
 						<a class="colorbox" href="images/vi2.jpg">
 						<div class="project-box">
@@ -647,22 +647,19 @@
 					</li>
 				</ul>
 			</div>
-			<!-- End Video Gallery -->
 
 			<!-- Back to Rentals Button -->
 			<div class="text-center">
 				<div class="height30"></div>
 				<a class="btn btn-lg btn-orange" href="#rentals_sales" role="button">Back To Rentals</a>
 				<div class="height30"></div>
-			</div>
-			<!-- End Back to Rentals Button -->
+			</div><!-- End Back to Rentals Button -->
 
-		</div><!-- /.container -->
+		</div><!-- End Video Gallery -->
 
 		<div class="clearfix"></div>
 
-
-		<!-- Staging / Drapery -->
+		<!-- Audio -->
 		<div id="audio">
 			<div class="container">
 				<div class="row">
@@ -735,8 +732,9 @@
 							</div>
 						</div> </a>
 					</li>
-				</ul><!-- /.gallery -->
+				</ul>
 			</div>
+			</div><!-- End Staging / Drapery -->
 
 			<!-- Staging / Drapery -->
 			<div id="staging">
@@ -811,7 +809,7 @@
 								</div>
 							</div> </a>
 						</li>
-					</ul><!-- /.gallery -->
+					</ul>
 				</div>
 
 				<!-- Back to Rentals Button -->
@@ -822,11 +820,9 @@
 				</div>
 				<!-- End Back to Rentals Button -->
 
-			</div><!-- /.container -->
-		</div>
-		<div class="clearfix"></div>
+			</div><!-- End Staging / Drapery -->
 
-		<!-- End Staging / Drapery -->
+		<div class="clearfix"></div>
 
 		<!-- Gallery -->
 		<div id="gallery" >
