--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
 				<div class="row">
 					<div class="line-header" style="margin-top: 50px;" >
 						<div class="text-center">
-							<hr class="team_hr team_hr_left hr_gray"/>
+							<hr class="savs_hr savs_hr_left hr_gray"/>
 							<span class="span_rentals_sales txt_darkgrey">RENTALS / SALES</span>
-							<hr class="team_hr team_hr_right hr_gray" />
+							<hr class="savs_hr savs_hr_right hr_gray" />
 						</div>
 					</div>
 				</div>
@@ -371,9 +371,9 @@
 				<div class="row">
 					<div class="line-header">
 						<div class="text-center">
-							<hr class="team_hr team_hr_left hr_gray"/>
+							<hr class="savs_hr savs_hr_left hr_gray"/>
 							<span class="txt_darkgrey">PROJECTORS</span>
-							<hr class="team_hr team_hr_right hr_gray" />
+							<hr class="savs_hr savs_hr_right hr_gray" />
 						</div>
 					</div>
 				</div>
@@ -474,9 +474,9 @@
 				<div class="row">
 					<div class="line-header">
 						<div class="text-center">
-							<hr class="team_hr team_hr_left hr_gray"/>
+							<hr class="savs_hr savs_hr_left hr_gray"/>
 							<span class="txt_darkgrey">LIGHTING</span>
-							<hr class="team_hr team_hr_right hr_gray" />
+							<hr class="savs_hr savs_hr_right hr_gray" />
 						</div>
 					</div>
 					<br class="clearfix"/>
@@ -496,10 +496,11 @@
 								<hr />
 								<h4>WITH CONTROLLERS</h4>
 							</div>
-						</div> </a>
-						<p>
-							Par 64's, Bars & Controllers
-						</p>
+						</div></a>
+						<div class="clearfix">							
+								Par 64's, Bars & Controllers							
+						</div>
+
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
 						<a class="colorbox" href="images/pr5.jpg">
@@ -511,9 +512,7 @@
 								<h4>ALL SIZES AND COLORS</h4>
 							</div>
 						</div> </a>
-						<p>
-							Hanging LED Par 36
-						</p>
+						<div class="clearfix">Hanging LED Par 36</div>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
 						<a class="colorbox" href="images/pr3.jpg">
@@ -525,7 +524,7 @@
 								<h4>ALL COLORS AND SIZES</h4>
 							</div>
 						</div> </a>
-						<p>
+						<p class="desc">
 							Floor standing Par 36 up light
 						</p>
 					</li>
@@ -539,7 +538,7 @@
 								<h4>LIGHTS</h4>
 							</div>
 						</div> </a>
-						<p>
+						<p class="desc">
 							Customized packages
 						</p>
 					</li>
@@ -553,7 +552,7 @@
 								<h4>PROJECTION LIGHTS</h4>
 							</div>
 						</div> </a>
-						<p>
+						<p class="desc">
 							GOBO Light Projection
 						</p>
 					</li>
@@ -578,9 +577,9 @@
 				<div class="row">
 					<div class="line-header">
 						<div class="text-center">
-							<hr class="team_hr team_hr_left hr_gray"/>
+							<hr class="savs_hr savs_hr_left hr_gray"/>
 							<span class="txt_darkgrey">VIDEO / SCREENS</span>
-							<hr class="team_hr team_hr_right hr_gray" />
+							<hr class="savs_hr savs_hr_right hr_gray" />
 						</div>
 					</div>
 					<br class="clearfix"/>
@@ -589,7 +588,7 @@
 				<ul class="project-gallery" >
 
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
-						<a class="colorbox" href="images/Dummy.jpg">
+						<a class="colorbox" href="images/vi7.jpg">
 						<div class="project-box">
 							<img src="images/vi3t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
@@ -601,7 +600,7 @@
 					</li>
 
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
-						<a class="colorbox" href="images/vi.jpg">
+						<a class="colorbox" href="images/vi6.jpg">
 						<div class="project-box">
 							<img src="images/v6t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
@@ -635,7 +634,7 @@
 						</div> </a>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
-						<a class="colorbox" href="images/Dummy.jpg">
+						<a class="colorbox" href="images/vi4.jpg">
 						<div class="project-box">
 							<img src="images/vi2t.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
@@ -665,9 +664,9 @@
 				<div class="row">
 					<div class="line-header">
 						<div class="text-center">
-							<hr class="team_hr team_hr_left hr_gray"/>
+							<hr class="savs_hr savs_hr_left hr_gray"/>
 							<span class="txt_darkgrey">SOUND SYSTEMS</span>
-							<hr class="team_hr team_hr_right hr_gray" />
+							<hr class="savs_hr savs_hr_right hr_gray" />
 						</div>
 					</div>
 					<br class="clearfix"/>
@@ -734,93 +733,101 @@
 					</li>
 				</ul>
 			</div>
-			</div><!-- End Staging / Drapery -->
 
-			<!-- Staging / Drapery -->
-			<div id="staging">
-				<div class="container">
-					<div class="row">
-						<div class="line-header">
-							<div class="text-center">
-								<hr class="team_hr team_hr_left hr_gray"/>
-								<span class="txt_darkgrey">STAGE / DRAPES</span>
-								<hr class="team_hr team_hr_right hr_gray" />
-							</div>
+			<!-- Back to Rentals Button -->
+			<div class="text-center">
+				<div class="height30"></div>
+				<a class="btn btn-lg btn-orange" href="#rentals_sales" role="button">Back To Rentals</a>
+				<div class="height30"></div>
+			</div><!-- End Back to Rentals Button -->
+
+		</div><!-- End Staging / Drapery -->
+
+		<!-- Staging / Drapery -->
+		<div id="staging">
+			<div class="container">
+				<div class="row">
+					<div class="line-header">
+						<div class="text-center">
+							<hr class="savs_hr savs_hr_left hr_gray"/>
+							<span class="txt_darkgrey">STAGE / DRAPES</span>
+							<hr class="savs_hr savs_hr_right hr_gray" />
 						</div>
-						<br class="clearfix"/>
 					</div>
-
-					<ul class="project-gallery" >
-						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
-							<a class="colorbox" href="images/Dummy.jpg">
-							<div class="project-box">
-								<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
-								<div class="project-overlay">
-									<h5>IMAGE</h5>
-									<hr />
-									<h4>PLACE HOLDER</h4>
-								</div>
-							</div> </a>
-						</li>
-						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
-							<a class="colorbox" href="images/Dummy.jpg">
-							<div class="project-box">
-								<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
-								<div class="project-overlay">
-									<h5>IMAGE</h5>
-									<hr />
-									<h4>PLACE HOLDER</h4>
-								</div>
-							</div> </a>
-						</li>
-						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-							<a class="colorbox" href="images/Dummy.jpg">
-							<div class="project-box">
-								<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
-								<div class="project-overlay">
-									<h5>IMAGE</h5>
-									<hr />
-									<h4>PLACE HOLDER</h4>
-								</div>
-								<div class="text-center">
-									Ultra short throw projector
-								</div>
-							</div> </a>
-						</li>
-						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
-							<a class="colorbox" href="images/Dummy.jpg">
-							<div class="project-box">
-								<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
-								<div class="project-overlay">
-									<h5>IMAGE</h5>
-									<hr />
-									<h4>PLACE HOLDER</h4>
-								</div>
-							</div> </a>
-						</li>
-						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-							<a class="colorbox" href="images/Dummy.jpeg">
-							<div class="project-box">
-								<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
-								<div class="project-overlay">
-									<h5>IMAGE</h5>
-									<hr />
-									<h4>PLACE HOLDER</h4>
-								</div>
-							</div> </a>
-						</li>
-					</ul>
+					<br class="clearfix"/>
 				</div>
 
-				<!-- Back to Rentals Button -->
-				<div class="text-center">
-					<div class="height30"></div>
-					<a class="btn btn-lg btn-orange" href="#rentals_sales" role="button">Back To Rentals</a>
-					<div class="height30"></div>
-				</div>
-				<!-- End Back to Rentals Button -->
+				<ul class="project-gallery" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
+						<a class="colorbox" href="images/Dummy.jpg">
+						<div class="project-box">
+							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>IMAGE</h5>
+								<hr />
+								<h4>PLACE HOLDER</h4>
+							</div>
+						</div> </a>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
+						<a class="colorbox" href="images/Dummy.jpg">
+						<div class="project-box">
+							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>IMAGE</h5>
+								<hr />
+								<h4>PLACE HOLDER</h4>
+							</div>
+						</div> </a>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+						<a class="colorbox" href="images/Dummy.jpg">
+						<div class="project-box">
+							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>IMAGE</h5>
+								<hr />
+								<h4>PLACE HOLDER</h4>
+							</div>
+							<div class="text-center">
+								Ultra short throw projector
+							</div>
+						</div> </a>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
+						<a class="colorbox" href="images/Dummy.jpg">
+						<div class="project-box">
+							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>IMAGE</h5>
+								<hr />
+								<h4>PLACE HOLDER</h4>
+							</div>
+						</div> </a>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+						<a class="colorbox" href="images/Dummy.jpeg">
+						<div class="project-box">
+							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>IMAGE</h5>
+								<hr />
+								<h4>PLACE HOLDER</h4>
+							</div>
+						</div> </a>
+					</li>
+				</ul>
+			</div>
 
-			</div><!-- End Staging / Drapery -->
+			<!-- Back to Rentals Button -->
+			<div class="text-center">
+				<div class="height30"></div>
+				<a class="btn btn-lg btn-orange" href="#rentals_sales" role="button">Back To Rentals</a>
+				<div class="height30"></div>
+			</div>
+			<!-- End Back to Rentals Button -->
+
+		</div><!-- End Staging / Drapery -->
 
 		<div class="clearfix"></div>
 
@@ -830,9 +837,9 @@
 				<div class="row">
 					<div class="line-header" style="margin-top: 00px">
 						<div class="text-center">
-							<hr class="team_hr team_hr_left hr_gray"/>
+							<hr class="savs_hr savs_hr_left hr_gray"/>
 							<span class="txt_darkgrey">OUR GALLERY</span>
-							<hr class="team_hr team_hr_right hr_gray" />
+							<hr class="savs_hr savs_hr_right hr_gray" />
 						</div>
 					</div>
 
@@ -956,7 +963,17 @@
 					</div>
 				</div>
 			</div>
+
+			<!-- Back to Rentals Button -->
+			<div class="text-center">
+				<div class="height30"></div>
+				<a class="btn btn-lg btn-orange" href="#rentals_sales" role="button">Back To Rentals</a>
+				<div class="height30"></div>
+			</div><!-- End Back to Rentals Button -->
+
 		</div><!-- End Gallery -->
+
+		<div class="clearfix"></div>
 
 		<!-- Contact -->
 		<div id="contact">
@@ -964,9 +981,9 @@
 				<div class="row">
 					<div class="line-header" style="margin-bottom: 100px">
 						<div class="text-center">
-							<hr class="team_hr team_hr_left hr_gray"/>
+							<hr class="savs_hr savs_hr_left hr_gray"/>
 							<span class="txt_darkgrey">CONTACT US</span>
-							<hr class="team_hr team_hr_right hr_gray"/>
+							<hr class="savs_hr savs_hr_right hr_gray"/>
 						</div>
 					</div>
 
@@ -1004,6 +1021,8 @@
 			</div>
 		</div><!-- End Contact -->
 
+		<div class="clearfix"></div>
+
 		<!-- Testimonial -->
 		<div class="tweets">
 			<div class="container">
@@ -1022,6 +1041,8 @@
 				</div>
 			</div>
 		</div><!-- End Testimonial -->
+
+		<div class="clearfix"></div>
 
 		<!-- Footer -->
 		<div class="footer" >
@@ -1048,13 +1069,17 @@
 									<a href="#"> <span class="social-icon-gplus"></span> </a>
 								</li>
 							</ul>
-							<div class="height30"></div>
-							<a class="btn btn-lg btn-orange" href="#" role="button" id="btn-back-to-top">Back To Top</a>
-							<div class="height30"></div>
 						</div>
 					</div>
 				</div>
 			</div>
+
+			<!-- Back to Rentals Button -->
+			<div class="text-center">
+				<div class="height30"></div>
+				<a class="btn btn-lg btn-orange" href="#top" role="button">Back To Top</a>
+				<div class="height30"></div>
+			</div><!-- End Back to Rentals Button -->
 		</div><!-- End Footer -->
 
 		<script src="js/jquery.min.js" type="text/javascript"></script>
