--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 							<div class="container" style="font-size: 16px;">
 								<div class="row">
 									<!-- /.col-md-3 -->
-									<div class="col-md-3 col-sm-6">
+									<div class="col-md-3 col-sm-3">
 										<div class="service-item">
 											<a href="#projectors"><h2>Data Projection</h2></a>
 											<p>
@@ -214,7 +214,7 @@
 									</div>
 
 									<!-- /.col-md-3 -->
-									<div class="col-md-3 col-sm-6">
+									<div class="col-md-3 col-sm-3">
 										<div class="service-item">
 											<span class="service-icon second"></span>
 											<a href="#lighting"><h2>Lighting</h2></a>
@@ -225,7 +225,7 @@
 										<!-- /.service-item -->
 									</div>
 									<!-- /.col-md-3 -->
-									<div class="col-md-3 col-sm-6">
+									<div class="col-md-3 col-sm-3">
 										<div class="service-item">
 											<span class="service-icon third"></span>
 											<a href="#audio"><h2>Audio</h2></a>
@@ -236,7 +236,7 @@
 										<!-- /.service-item -->
 									</div>
 									<!-- /.col-md-3 -->
-									<div class="col-md-3 col-sm-6">
+									<div class="col-md-3 col-sm-3">
 										<div class="service-item">
 											<span class="service-icon fourth"></span>
 											<a href="#staging"><h2>Staging / Drapery</h2></a>
@@ -359,11 +359,10 @@
 						</ul>
 					</div>
 					<!-- End Rental Sales Post 4 -->
-
 				</div>
 			</div>
 		</div>
-		f <!-- End Rentals Sales -->
+		<!-- End Rentals Sales -->
 
 		<!-- Projectors -->
 		<div id="projectors">
@@ -455,14 +454,6 @@
 					</li>
 				</ul><!-- End Gallery -->
 
-				<!-- Back to Rentals Button -->
-				<div class="text-center">
-					<div class="height30"></div>
-					<a class="btn btn-lg btn-orange" href="#rentals_sales" role="button">Back To Rentals</a>
-					<div class="height30"></div>
-				</div>
-				<!-- End Back to Rentals Button -->
-
 			</div>
 			<!-- End Container -->
 		</div>
@@ -479,7 +470,7 @@
 							<hr class="savs_hr savs_hr_right hr_gray" />
 						</div>
 					</div>
-					<br class="clearfix"/>
+					
 				</div>
 				<div class="text-center">
 					<div class=service-item-header>
@@ -558,14 +549,6 @@
 					</li>
 				</ul>
 			</div>
-
-			<!-- Back to Rentals Button -->
-			<div class="text-center">
-				<div class="height30"></div>
-				<a class="btn btn-lg btn-orange" href="#rentals_sales" role="button">Back To Rentals</a>
-				<div class="height30"></div>
-			</div>
-			<!-- End Back to Rentals Button -->
 
 		</div><!-- End Lighting Gallery -->
 
@@ -647,13 +630,6 @@
 				</ul>
 			</div>
 
-			<!-- Back to Rentals Button -->
-			<div class="text-center">
-				<div class="height30"></div>
-				<a class="btn btn-lg btn-orange" href="#rentals_sales" role="button">Back To Rentals</a>
-				<div class="height30"></div>
-			</div><!-- End Back to Rentals Button -->
-
 		</div><!-- End Video Gallery -->
 
 		<div class="clearfix"></div>
@@ -734,13 +710,6 @@
 				</ul>
 			</div>
 
-			<!-- Back to Rentals Button -->
-			<div class="text-center">
-				<div class="height30"></div>
-				<a class="btn btn-lg btn-orange" href="#rentals_sales" role="button">Back To Rentals</a>
-				<div class="height30"></div>
-			</div><!-- End Back to Rentals Button -->
-
 		</div><!-- End Staging / Drapery -->
 
 		<!-- Staging / Drapery -->
@@ -818,14 +787,6 @@
 					</li>
 				</ul>
 			</div>
-
-			<!-- Back to Rentals Button -->
-			<div class="text-center">
-				<div class="height30"></div>
-				<a class="btn btn-lg btn-orange" href="#rentals_sales" role="button">Back To Rentals</a>
-				<div class="height30"></div>
-			</div>
-			<!-- End Back to Rentals Button -->
 
 		</div><!-- End Staging / Drapery -->
 
@@ -964,12 +925,6 @@
 				</div>
 			</div>
 
-			<!-- Back to Rentals Button -->
-			<div class="text-center">
-				<div class="height30"></div>
-				<a class="btn btn-lg btn-orange" href="#rentals_sales" role="button">Back To Rentals</a>
-				<div class="height30"></div>
-			</div><!-- End Back to Rentals Button -->
 
 		</div><!-- End Gallery -->
 
@@ -1074,12 +1029,6 @@
 				</div>
 			</div>
 
-			<!-- Back to Rentals Button -->
-			<div class="text-center">
-				<div class="height30"></div>
-				<a class="btn btn-lg btn-orange" href="#top" role="button">Back To Top</a>
-				<div class="height30"></div>
-			</div><!-- End Back to Rentals Button -->
 		</div><!-- End Footer -->
 
 		<script src="js/jquery.min.js" type="text/javascript"></script>
