--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
 										<a href="#top">HOME</a>
 									</li>
 									<li>
-										<a href="#about">ABOUT</a>
+										<a href="#about" class="rentaldropdown">ABOUT <span class="caret"></span></a>
+												<ul>
+											<li>
+												<a href="#testimonials">TESTIMONIALS</a>
+											</li>
+											
+										</ul>
+									</li>
 									</li>
 									<li>
 										<a href="#rentals_sales" class="rentaldropdown">RENTALS <span class="caret"></span></a>
@@ -219,7 +226,7 @@
 											<span class="service-icon second"></span>
 											<a href="#lighting"><h2>Lighting</h2></a>
 											<p>
-												We are experienced at creating the right mood for your environment. Whether you need ambient back lighting for an auction or stage lighting for a concert, we have the design skills, equipment and manpower to expertly serve your needs.
+												We create awesome environments.. Whether you need ambient back lighting for an auction or stage lighting for a concert, we have the design skills, equipment and manpower to expertly serve your needs.
 											</p>
 										</div>
 										<!-- /.service-item -->
@@ -258,12 +265,33 @@
 			</div>
 		</div>
 		<!-- End Welcome -->
+		
+				<!-- Testimonial -->
+		<div id="testimonials" class="testimonials">
+			<div class="container">
+				<div class="row" style="margin-top:20px;">
+					<div class="col-md-2"></div>
+					<div class="col-md-1">
+						<img src="images/quote.png" alt="icon" />
+					</div>
+					<div class="col-md-7 tweet_txt" >
+						<span>Doug Kennelly has consistently provided outstanding audio visual equipment
+							and production services at conferences and conventions for me over
+							the past 15 years. The latest event was the 2014 ConveyUX conference at the Olive 8 in Seattle. Partnering with Doug insures reliable and consstent service.</span>
+						<br/>
+						<span class="twitter_user">Joe @ BlinkUX</span>
+					</div>
+				</div>
+			</div>
+		</div><!-- End Testimonial -->
+
+		<div class="clearfix"></div>
 
 		<!-- Start Rentals Sales -->
 		<div id="rentals_sales">
 			<div class="container">
 				<div class="row">
-					<div class="line-header" style="margin-top: 50px;" >
+					<div class="line-header" style="margin-top: 30px;" >
 						<div class="text-center">
 							<hr class="savs_hr savs_hr_left hr_gray"/>
 							<span class="span_rentals_sales txt_darkgrey">RENTALS / SALES</span>
@@ -975,27 +1003,6 @@
 				</div>
 			</div>
 		</div><!-- End Contact -->
-
-		<div class="clearfix"></div>
-
-		<!-- Testimonial -->
-		<div class="tweets">
-			<div class="container">
-				<div class="row" style="margin-top:20px;">
-					<div class="col-md-2"></div>
-					<div class="col-md-1">
-						<img src="images/quote.png" alt="icon" />
-					</div>
-					<div class="col-md-7 tweet_txt" >
-						<span>Doug Kennelly has consistently provided outstanding audio visual equipment
-							and production services at conferences and conventions for me over
-							the past 15 years. The latest event was the 2014 ConveyUX conference at the Olive 8 in Seattle. Partnering with Doug insures reliable and consstent service.</span>
-						<br/>
-						<span class="twitter_user">Joe @ BlinkUX</span>
-					</div>
-				</div>
-			</div>
-		</div><!-- End Testimonial -->
 
 		<div class="clearfix"></div>
 
