--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<link href='http://fonts.googleapis.com/css?family=quantico:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 
 		<!-- Bootstrap  CSS -->
-		<link href="css/bootstrap.css" rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
 		<!-- Colorbox CSS -->
 		<link href="js/colorbox/colorbox.css"  rel='stylesheet' type='text/css'>
@@ -65,24 +65,24 @@
 
 							<!-- Menu -->
 							<div class="navbar-collapse collapse" id="nav-bar">
-								<ul class="nav navbar-nav navbar-right" style="margin-top: 40px; font-size: 13px;">
+								<ul class="nav navbar-nav navbar-right" style="margin-top: 40px; font-size: 14px;">
 
 									<li class="active">
 										<a href="#top">HOME</a>
 									</li>
-									<li>
-										<a href="#about" class="rentaldropdown">ABOUT <span class="caret"></span></a>
-												<ul>
+									<li class="dropdown">
+										<a href="#about" data-toggle="dropdown" class="dropdown-toggle">ABOUT <span class="caret"></span></a>
+										<ul class="dropdown-menu">
 											<li>
 												<a href="#testimonials">TESTIMONIALS</a>
 											</li>
-											
+
 										</ul>
 									</li>
 									</li>
 									<li>
-										<a href="#rentals_sales" class="rentaldropdown">RENTALS <span class="caret"></span></a>
-										<ul>
+										<a href="#rentals_sales" data-toggle="dropdown" class="dropdown-toggle">RENTALS <span class="caret"></span></a>
+										<ul class="dropdown-menu">
 											<li>
 												<a href="#projectors">PROJECTORS</a>
 											</li>
@@ -226,7 +226,7 @@
 											<span class="service-icon second"></span>
 											<a href="#lighting"><h2>Lighting</h2></a>
 											<p>
-												We create awesome environments.. Whether you need ambient back lighting for an auction or stage lighting for a concert, we have the design skills, equipment and manpower to expertly serve your needs.
+												We create some awesome environments. Whether you need ambient back lighting for an auction or stage lighting for a concert, we have the design skills, equipment and manpower to expertly serve your needs.
 											</p>
 										</div>
 										<!-- /.service-item -->
@@ -265,8 +265,8 @@
 			</div>
 		</div>
 		<!-- End Welcome -->
-		
-				<!-- Testimonial -->
+
+		<!-- Testimonial -->
 		<div id="testimonials" class="testimonials">
 			<div class="container">
 				<div class="row" style="margin-top:20px;">
@@ -379,7 +379,7 @@
 								<div class="pull-right">
 									<a class="btn btn-orange" href="#staging" role="button">INFORMATION</a>
 								</div>
-								<div class="clearfix"></div>
+
 								<p class="rentals_sales_text">
 									Shakespeare would roll over in his grave if he knew what we were up to in the realms of staging and drapery. We have steel decking big enough for Metallica and enough pipes and drapes to make a booth for every gamer at the next Uber Dark Lord of the Games Game-a-Thon.
 								</p>
@@ -494,11 +494,10 @@
 					<div class="line-header">
 						<div class="text-center">
 							<hr class="savs_hr savs_hr_left hr_gray"/>
-							<span class="txt_darkgrey">LIGHTING</span>
+							<span class="txt_darkgrey">STAGE LIGHTING</span>
 							<hr class="savs_hr savs_hr_right hr_gray" />
 						</div>
 					</div>
-					
 				</div>
 				<div class="text-center">
 					<div class=service-item-header>
@@ -506,8 +505,8 @@
 					</div>
 				</div>
 				<ul class="project-gallery" >
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
-						<a class="colorbox" href="images/pr6.jpg">
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery">
+						<a class="colorbox" href="images/pr6.jpg" data-group="lighting">
 						<div class="project-box">
 							<img src="images/pr6.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
@@ -516,13 +515,12 @@
 								<h4>WITH CONTROLLERS</h4>
 							</div>
 						</div></a>
-						<div class="clearfix">							
-								Par 64's, Bars & Controllers							
+						<div>
+							Par 64's, Bars & Controllers
 						</div>
-
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
-						<a class="colorbox" href="images/pr5.jpg">
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
+						<a class="colorbox" href="images/pr5.jpg" data-group="lighting">
 						<div class="project-box">
 							<img src="images/pr5.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
@@ -531,10 +529,12 @@
 								<h4>ALL SIZES AND COLORS</h4>
 							</div>
 						</div> </a>
-						<div class="clearfix">Hanging LED Par 36</div>
+						<div class="clearfix">
+							Hanging LED Par 36
+						</div>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-						<a class="colorbox" href="images/pr3.jpg">
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery" >
+						<a class="colorbox" href="images/pr3.jpg" data-group="lighting">
 						<div class="project-box">
 							<img src="images/pr3.jpg" class="img-responsive" alt="gallery"/>
 							<div class="project-overlay">
@@ -543,12 +543,12 @@
 								<h4>ALL COLORS AND SIZES</h4>
 							</div>
 						</div> </a>
-						<p class="desc">
+						<div>
 							Floor standing Par 36 up light
-						</p>
+						</div>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design">
-						<a class="colorbox" href="images/pr2.png">
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery">
+						<a class="colorbox" href="images/pr2.png" data-group="lighting">
 						<div class="project-box">
 							<img src="images/pr2.png" class="img-responsive" alt="gallery"/>
 							<div class="project-overlay">
@@ -557,12 +557,12 @@
 								<h4>LIGHTS</h4>
 							</div>
 						</div> </a>
-						<p class="desc">
+						<div>
 							Customized packages
-						</p>
+						</div>
 					</li>
-					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration">
-						<a class="colorbox" href="images/pr1.jpg">
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery">
+						<a class="colorbox" href="images/pr1.jpg" data-group="lighting">
 						<div class="project-box">
 							<img src="images/pr1.jpg" class="img-responsive" alt="gallery"/>
 							<div class="project-overlay">
@@ -571,9 +571,9 @@
 								<h4>PROJECTION LIGHTS</h4>
 							</div>
 						</div> </a>
-						<p class="desc">
+						<div>
 							GOBO Light Projection
-						</p>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -953,7 +953,6 @@
 				</div>
 			</div>
 
-
 		</div><!-- End Gallery -->
 
 		<div class="clearfix"></div>
@@ -1038,8 +1037,8 @@
 
 		</div><!-- End Footer -->
 
-		<script src="js/jquery.min.js" type="text/javascript"></script>
-		<script src="js/bootstrap.min.js"  type="text/javascript"></script>
+		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 		<script src="js/stickUp.min.js"  type="text/javascript"></script>
 		<script src="js/colorbox/jquery.colorbox-min.js"  type="text/javascript"></script>
 		<script src="js/savs-template_script.js"  type="text/javascript"></script>
