--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 								</button>
-								<a class="navbar-brand" href="" rel="nofollow"><img src="images/logo.png" height="145" alt="logo"/></a>
+								<a class="navbar-brand" href="" rel="nofollow"><img src="images/logo.png" height="130" alt="logo"/></a>
 							</div>
 
 							<!-- Menu -->
@@ -187,7 +187,7 @@
 						<div class="content-section">
 							<div class="container">
 								<div class="row">
-									<div class="col-md-12 col-sm-6">
+									<div class="col-md-12 col-sm-12">
 
 										<div class="service-item">
 											<p>
@@ -1042,5 +1042,28 @@
 		<script src="js/stickUp.min.js"  type="text/javascript"></script>
 		<script src="js/colorbox/jquery.colorbox-min.js"  type="text/javascript"></script>
 		<script src="js/savs-template_script.js"  type="text/javascript"></script>
+		<script type="text/javascript">
+			//initiating
+			jQuery jQuery(function($) {
+				$(document).ready(function() {
+					//enabling stickUp on the '.navbar-wrapper' class
+					$('.navbar-wrapper').stickUp({
+						parts : {
+							0 : 'home',
+							1 : 'features',
+							2 : 'news',
+							3 : 'installation',
+							4 : 'one-pager',
+							5 : 'extras',
+							6 : 'wordpress',
+							7 : 'contact'
+						},
+						itemClass : 'menuItem',
+						itemHover : 'active',
+						marginTop: 'auto'
+					});
+				});
+			});
+		</script>
 	</body>
 </html>
