--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<![endif]-->
 
 		<!-- JSSOR Slider Includes -->
-		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/jssor.core.js"></script>
 		<script type="text/javascript" src="js/jssor.utils.js"></script>
 		<script type="text/javascript" src="js/jssor.slider.js"></script>
@@ -113,6 +113,7 @@
 					</div>
 				</div><!-- End Nav -->
 			</div><!-- End stuckMenu -->
+		</div>
 
 			<!-- JSSOR Full Width Slider -->
 			<div id="slider1_container" style="position: relative; margin: 0 auto;
@@ -1037,33 +1038,9 @@
 
 		</div><!-- End Footer -->
 
-		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-		<script src="js/stickUp.min.js"  type="text/javascript"></script>
+		<script src="js/bootstrap.min.js" type="text/javascript"></script>
 		<script src="js/colorbox/jquery.colorbox-min.js"  type="text/javascript"></script>
 		<script src="js/savs-template_script.js"  type="text/javascript"></script>
-		<script type="text/javascript">
-			//initiating
-			jQuery jQuery(function($) {
-				$(document).ready(function() {
-					//enabling stickUp on the '.navbar-wrapper' class
-					$('.navbar-wrapper').stickUp({
-						parts : {
-							0 : 'home',
-							1 : 'features',
-							2 : 'news',
-							3 : 'installation',
-							4 : 'one-pager',
-							5 : 'extras',
-							6 : 'wordpress',
-							7 : 'contact'
-						},
-						itemClass : 'menuItem',
-						itemHover : 'active',
-						marginTop: 'auto'
-					});
-				});
-			});
-		</script>
+
 	</body>
 </html>
