--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 		<script type="text/javascript" src="js/jssor.utils.js"></script>
 		<script type="text/javascript" src="js/jssor.slider.js"></script>
 		<script type="text/javascript" src="js/savs-slider.js"></script>
+		<script src="js/bootstrap.min.js" type="text/javascript"></script>
+		<script src="js/colorbox/jquery.colorbox-min.js"  type="text/javascript"></script>
+		<script src="js/savs-template_script.js"  type="text/javascript"></script>
+
 
 	</head>
 	<body>
@@ -45,7 +49,7 @@
 		<div class="top-bar" id="top">
 
 			<!-- Stuck Menu -->
-			<div class="top-menu stuckMenu">
+			<div class="top-menu fixed-menu">
 
 				<!-- Outer Container for Fixed Navigation -->
 				<div class="container">
@@ -112,78 +116,78 @@
 						</div>
 					</div>
 				</div><!-- End Nav -->
-			</div><!-- End stuckMenu -->
+			</div><!-- End fixed-menu -->
 		</div>
 
-			<!-- JSSOR Full Width Slider -->
-			<div id="slider1_container" style="position: relative; margin: 0 auto;
-			top: 150px; left: 0px; width: 1920px; height: 450px; overflow: hidden;">
+		<!-- JSSOR Full Width Slider -->
+		<div id="slider1_container" style="position: relative; margin: 0 auto;
+		top: 100px; left: 0px; width: 1920px; height: 450px; overflow: hidden;">
 
-				<!-- Loading Screen -->
-				<div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
-					<div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block;
-					top: 0px; left: 0px; width: 100%; height: 100%;"></div>
-					<div style="position: absolute; display: block; background: url(js/img/loading.gif) no-repeat center center;
-					top: 0px; left: 0px; width: 100%; height: 100%;"></div>
-				</div>
-
-				<!-- Slides Container -->
-				<div data-u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1920px;
-				height: 450px; overflow: hidden;">
-					<div>
-						<img data-u="image" src="images/slider2.jpg" alt="ambience"/>
-
-						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
-						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
-						color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
-							<span>AMBIENCE AND MOOD LIGHTING</span>
-						</div>
-					</div>
-					<div>
-						<img data-u="image" src="images/slider1.jpg" alt="staging with backgrounds" />
-						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
-						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
-						color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
-							<span>STAGING WITH BACKGROUNDS</span>
-						</div>
-					</div>
-					<div>
-						<img data-u="image" src="images/slider3.jpg" alt="projection and screens" />
-						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
-						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
-						color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
-							<span>PROJECTION AND SCREENING</span>
-						</div>
-					</div>
-					<div>
-						<img data-u="image" src="images/slider4.jpg" alt="lighting installation"/>
-						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
-						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
-						color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
-							<span>LIGHTING INSTALLATION</span>
-						</div>
-					</div>
-					<div>
-						<img data-u="image" src="images/slider5.jpg" alt="drapes pipes and booths"/>
-						<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
-						text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
-						color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
-							<span>DRAPES, PIPES AND BOOTHS</span>
-						</div>
-					</div>
-				</div><!-- End Slides Container -->
-				<div class="clearfix"></div>
+			<!-- SLider Loading Screen -->
+			<div data-u="loading" style="position: absolute; top: 0px; left: 0px;">
+				<div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block;
+				top: 0px; left: 0px; width: 100%; height: 100%;"></div>
+				<div style="position: absolute; display: block; background: url(js/img/loading.gif) no-repeat center center;
+				top: 0px; left: 0px; width: 100%; height: 100%;"></div>
 			</div>
+
+			<!-- Slides Container -->
+			<div data-u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 1920px;
+			height: 450px; overflow: hidden;">
+				<div>
+					<img data-u="image" src="images/slider2.jpg" alt="ambience"/>
+
+					<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
+					text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
+					color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
+						<span>AMBIENCE AND MOOD LIGHTING</span>
+					</div>
+				</div>
+				<div>
+					<img data-u="image" src="images/slider1.jpg" alt="staging with backgrounds" />
+					<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
+					text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
+					color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
+						<span>STAGING WITH BACKGROUNDS</span>
+					</div>
+				</div>
+				<div>
+					<img data-u="image" src="images/slider3.jpg" alt="projection and screens" />
+					<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
+					text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
+					color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
+						<span>PROJECTION AND SCREENING</span>
+					</div>
+				</div>
+				<div>
+					<img data-u="image" src="images/slider4.jpg" alt="lighting installation"/>
+					<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
+					text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
+					color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
+						<span>LIGHTING INSTALLATION</span>
+					</div>
+				</div>
+				<div>
+					<img data-u="image" src="images/slider5.jpg" alt="drapes pipes and booths"/>
+					<div style="position: absolute; width: 480px; height: 120px; top: 70px; left: 00px;
+					text-align: left; line-height: 60px; text-transform: uppercase; font-size: 50px; padding-left: 10px;
+					color: #FFFFFF; background-color:rgba(0,0,0,0.6);">
+						<span>DRAPES, PIPES AND BOOTHS</span>
+					</div>
+				</div>
+			</div><!-- End Slides Container -->
+			<div class="clearfix"></div>
+		</div>
 		</div><!-- End JSSOR Slider -->
 
-		<!-- Start Welcome -->
+		<!-- Start aboutus -->
 		<div id="about" >
-			<div class="welcome">
+			<div class="aboutus">
 				<div class="container">
 					<div class="slogan text-center">
-						<span class="txt_darkgrey">Welcome to </span><span class="txt_orange">Seattle AV Source</span>
+						<span class="txt_darkgrey">Welcome to </span><span class="txt_orange"><b>Seattle AV Services</b></span>
 						<div class="txt_slogan">
-							<i style="font-size: 16px;">Seattle's premier supplier of A/V equipment rentals for projection, lighting, video, audio, staging and drapery equipment</i>
+							<i style="font-size: 16px;">Seattle's premier supplier of A/V equipment rentals for projection, lighting, video, audio, and staging, pipe and drapery</i>
 						</div>
 						<div class="content-section">
 							<div class="container">
@@ -204,7 +208,7 @@
 								</div>
 							</div>
 						</div>
-						<!-- End Welcome -->
+						<!-- End aboutus -->
 
 						<!-- Services -->
 						<div id="services" class="content-section">
@@ -265,7 +269,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- End Welcome -->
+		<!-- End aboutus -->
 
 		<!-- Testimonial -->
 		<div id="testimonials" class="testimonials">
@@ -1037,10 +1041,5 @@
 			</div>
 
 		</div><!-- End Footer -->
-
-		<script src="js/bootstrap.min.js" type="text/javascript"></script>
-		<script src="js/colorbox/jquery.colorbox-min.js"  type="text/javascript"></script>
-		<script src="js/savs-template_script.js"  type="text/javascript"></script>
-
 	</body>
 </html>
