Removed Google Embedded Font

--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="icon" href="images/favicon.ico">
 
-		<!-- Embedded Google Web Font -->
-		<link href='http://fonts.googleapis.com/css?family=quantico:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
-
 		<!-- Bootstrap  CSS -->
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
@@ -23,7 +20,7 @@
 		<link href="js/colorbox/colorbox.css"  rel='stylesheet' type='text/css'>
 
 		<!-- Style CSS -->
-		<link href="css/savs-template_style.css"  rel='stylesheet' type='text/css'>
+		<link href="css/style.css"  rel='stylesheet' type='text/css'>
 
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
