--- a/index.html
+++ b/index.html
@@ -345,8 +345,6 @@
 						</ul>
 					</div><!-- End Rentals Sales Post 2 -->
 
-					<div class="savs-template_clear"></div>
-
 					<div class="col-sm-5 col-md-6 rentals_sales_post">
 						<ul class="list-inline">
 							<li class="col-md-4">
@@ -582,8 +580,6 @@
 
 		</div><!-- End Lighting Gallery -->
 
-		<div class="clearfix"></div>
-
 		<!-- Begin Video Gallery -->
 		<div id="video">
 			<div class="container">
@@ -753,7 +749,6 @@
 							<hr class="savs_hr savs_hr_right hr_gray" />
 						</div>
 					</div>
-					<br class="clearfix"/>
 				</div>
 
 				<ul class="project-gallery" >
@@ -820,139 +815,134 @@
 
 		</div><!-- End Staging / Drapery -->
 
-		<div class="clearfix"></div>
-
 		<!-- Gallery -->
 		<div id="gallery" >
 			<div class="container">
 				<div class="row">
-					<div class="line-header" style="margin-top: 00px">
+					<div class="line-header">
 						<div class="text-center">
 							<hr class="savs_hr savs_hr_left hr_gray"/>
-							<span class="txt_darkgrey">OUR GALLERY</span>
+							<span class="txt_darkgrey">EVENT GALLERY</span>
 							<hr class="savs_hr savs_hr_right hr_gray" />
 						</div>
 					</div>
-
-					<div class="text-center">
-						<ul class="project-gallery" >
-							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
-								<a class="colorbox" href="images/av0.jpg">
-								<div class="project-box">
-									<img src="images/avt0.jpg" class="img-responsive" alt="gallery" />
-									<div class="project-overlay">
-										<h5>NEW HORIZONS</h5>
-										<hr />
-										<h4>VIDEO SHOW</h4>
-									</div>
-								</div> </a>
-							</li>
-							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
-								<a class="colorbox" href="images/av1.jpg">
-								<div class="project-box">
-									<img src="images/avt1.jpg" class="img-responsive" alt="gallery" />
-									<div class="project-overlay">
-										<h5>CORPORATE</h5>
-										<hr />
-										<h4>PRODUCT RELEASE</h4>
-									</div>
-								</div> </a>
-							</li>
-							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-								<a class="colorbox" href="images/av2.jpg">
-								<div class="project-box">
-									<img src="images/avt2.jpg" class="img-responsive" alt="gallery" />
-									<div class="project-overlay">
-										<h5>SCHOOL</h5>
-										<hr />
-										<h4>AUCTION</h4>
-									</div>
-								</div> </a>
-							</li>
-							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
-								<a class="colorbox" href="images/av3.jpg">
-								<div class="project-box">
-									<img src="images/avt3.jpg" class="img-responsive" alt="gallery" />
-									<div class="project-overlay">
-										<h5>ACADEMIA</h5>
-										<hr />
-										<h4>PLENARY SPEAKER</h4>
-									</div>
-								</div> </a>
-							</li>
-							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-								<a class="colorbox" href="images/av4.jpg">
-								<div class="project-box">
-									<img src="images/avt4.jpg" class="img-responsive" alt="gallery" />
-									<div class="project-overlay">
-										<h5>KEYNOTE SPEAKER</h5>
-										<hr />
-										<h4>LUNCHEON</h4>
-									</div>
-								</div> </a>
-							</li>
-							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-								<a class="colorbox" href="images/av5.jpg">
-								<div class="project-box">
-									<img src="images/avt5.jpg" class="img-responsive" alt="gallery" />
-									<div class="project-overlay">
-										<h5>BANQUET</h5>
-										<hr />
-										<h4>AUCTION</h4>
-									</div>
-								</div> </a>
-							</li>
-
-							<li class="col-lg-2 col-md-2 col-sm-2 gallery gallery-design" >
-								<a class="colorbox" href="images/av6.jpg">
-								<div class="project-box">
-									<img src="images/avt6.jpg" class="img-responsive" alt="gallery" />
-									<div class="project-overlay">
-										<h5>POLITICAL SPEECH</h5>
-										<hr />
-										<h4>SPAIN</h4>
-									</div>
-								</div> </a>
-							</li>
-
-							<li class="col-lg-2 col-md-2 col-sm-2 gallery gallery-creative" >
-								<a class="colorbox" href="images/av9.jpg">
-								<div class="project-box">
-									<img src="images/avt9.jpg" class="img-responsive" alt="gallery" />
-									<div class="project-overlay">
-										<h5>HOTEL BANQUET</h5>
-										<hr />
-										<h4>STAGE, SCREENS, LIGHITNG</h4>
-									</div>
-								</div> </a>
-							</li>
-
-							<li class="col-lg-2 col-md-2 col-sm-2 gallery gallery-graphic" >
-								<a class="colorbox" href="images/av12.jpg">
-								<div class="project-box">
-									<img src="images/avt12.jpg" class="img-responsive" alt="gallery" />
-									<div class="project-overlay">
-										<h5>SPANDEX SCREENS</h5>
-										<hr />
-										<h4>TRUSSING AND LIGHTING</h4>
-									</div>
-								</div> </a>
-							</li>
-
-							<li class="col-lg-2 col-md-2 col-sm-2 gallery gallery-inspiration" >
-								<a class="colorbox" href="images/av14.jpg">
-								<div class="project-box">
-									<img src="images/avt14.jpg" class="img-responsive" alt="gallery" />
-									<div class="project-overlay">
-										<h5>SPANDEX SCNEENS</h5>
-										<hr />
-										<h4>STAGE, TRUSS AND LIGHTING</h4>
-									</div>
-								</div> </a>
-							</li>
-						</ul>
-					</div>
 				</div>
+				<ul class="project-gallery" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
+						<a class="colorbox" href="images/av0.jpg">
+						<div class="project-box">
+							<img src="images/avt0.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>NEW HORIZONS</h5>
+								<hr />
+								<h4>VIDEO SHOW</h4>
+							</div>
+						</div> </a>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
+						<a class="colorbox" href="images/av1.jpg">
+						<div class="project-box">
+							<img src="images/avt1.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>CORPORATE</h5>
+								<hr />
+								<h4>PRODUCT RELEASE</h4>
+							</div>
+						</div> </a>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+						<a class="colorbox" href="images/av2.jpg">
+						<div class="project-box">
+							<img src="images/avt2.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>SCHOOL</h5>
+								<hr />
+								<h4>AUCTION</h4>
+							</div>
+						</div> </a>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
+						<a class="colorbox" href="images/av3.jpg">
+						<div class="project-box">
+							<img src="images/avt3.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>ACADEMIA</h5>
+								<hr />
+								<h4>PLENARY SPEAKER</h4>
+							</div>
+						</div> </a>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+						<a class="colorbox" href="images/av4.jpg">
+						<div class="project-box">
+							<img src="images/avt4.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>KEYNOTE SPEAKER</h5>
+								<hr />
+								<h4>LUNCHEON</h4>
+							</div>
+						</div> </a>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+						<a class="colorbox" href="images/av5.jpg">
+						<div class="project-box">
+							<img src="images/avt5.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>BANQUET</h5>
+								<hr />
+								<h4>AUCTION</h4>
+							</div>
+						</div> </a>
+					</li>
+
+					<li class="col-lg-2 col-md-2 col-sm-2 gallery gallery-design" >
+						<a class="colorbox" href="images/av6.jpg">
+						<div class="project-box">
+							<img src="images/avt6.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>POLITICAL SPEECH</h5>
+								<hr />
+								<h4>SPAIN</h4>
+							</div>
+						</div> </a>
+					</li>
+
+					<li class="col-lg-2 col-md-2 col-sm-2 gallery gallery-creative" >
+						<a class="colorbox" href="images/av9.jpg">
+						<div class="project-box">
+							<img src="images/avt9.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>HOTEL BANQUET</h5>
+								<hr />
+								<h4>STAGE, SCREENS, LIGHITNG</h4>
+							</div>
+						</div> </a>
+					</li>
+
+					<li class="col-lg-2 col-md-2 col-sm-2 gallery gallery-graphic" >
+						<a class="colorbox" href="images/av12.jpg">
+						<div class="project-box">
+							<img src="images/avt12.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>SPANDEX SCREENS</h5>
+								<hr />
+								<h4>TRUSSING AND LIGHTING</h4>
+							</div>
+						</div> </a>
+					</li>
+
+					<li class="col-lg-2 col-md-2 col-sm-2 gallery gallery-inspiration" >
+						<a class="colorbox" href="images/av14.jpg">
+						<div class="project-box">
+							<img src="images/avt14.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>SPANDEX SCNEENS</h5>
+								<hr />
+								<h4>STAGE, TRUSS AND LIGHTING</h4>
+							</div>
+						</div> </a>
+					</li>
+				</ul>
 			</div>
 
 		</div><!-- End Gallery -->
